tests/rosetta/transpiler/Elixir/avl-tree.error
run: exit status 1
    warning: variable "seed" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
    │
 14 │               seed = v
    │               ~
    │
    └─ /workspace/mochi/tests/rosetta/transpiler/Elixir/avl-tree.exs:14:15: Main._now/0

    warning: variable "seeded" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
    │
 15 │               seeded = true
    │               ~
    │
    └─ /workspace/mochi/tests/rosetta/transpiler/Elixir/avl-tree.exs:15:15: Main._now/0

    warning: variable "n" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
    │
 65 │       n = Map.put(n, "Link", links)
    │       ~
    │
    └─ /workspace/mochi/tests/rosetta/transpiler/Elixir/avl-tree.exs:65:7: Main.setLink/3

     warning: variable "n" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
     │
 105 │       {n, root} = if nn["Balance"] == 0 do
     │        ~
     │
     └─ /workspace/mochi/tests/rosetta/transpiler/Elixir/avl-tree.exs:105:8: Main.adjustBalance/3

     warning: variable "nn" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
     │
 121 │       nn = List.replace_at(nn, "Balance", 0)
     │       ~
     │
     └─ /workspace/mochi/tests/rosetta/transpiler/Elixir/avl-tree.exs:121:7: Main.adjustBalance/3

     warning: variable "root" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
     │
 105 │       {n, root} = if nn["Balance"] == 0 do
     │           ~
     │
     └─ /workspace/mochi/tests/rosetta/transpiler/Elixir/avl-tree.exs:105:11: Main.adjustBalance/3

     warning: variable "n" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
     │
 130 │       {n, root} = if n["Balance"] == bal do
     │        ~
     │
     └─ /workspace/mochi/tests/rosetta/transpiler/Elixir/avl-tree.exs:130:8: Main.insertBalance/2

     warning: variable "n" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
     │
 199 │       n = List.replace_at(n, "Balance", bal)
     │       ~
     │
     └─ /workspace/mochi/tests/rosetta/transpiler/Elixir/avl-tree.exs:199:7: Main.removeBalance/2

     warning: variable "i" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
     │
 284 │       {i, s} = try do
     │        ~
     │
     └─ /workspace/mochi/tests/rosetta/transpiler/Elixir/avl-tree.exs:284:8: Main.indentStr/1

    error: imported Kernel.node/1 conflicts with local function
    │
 47 │   def node(data) do
    │       ^
    │
    └─ /workspace/mochi/tests/rosetta/transpiler/Elixir/avl-tree.exs:47:7: Main (module)

** (CompileError) /workspace/mochi/tests/rosetta/transpiler/Elixir/avl-tree.exs: cannot compile module Main (errors have been logged)

